--- a/Example/MTools.xcodeproj/xcshareddata/xcschemes/MTools-Example.xcscheme
+++ b/Example/MTools.xcodeproj/xcshareddata/xcschemes/MTools-Example.xcscheme
@@ -85,6 +85,13 @@
             ReferencedContainer = "container:MTools.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
